20160805:
	* ezgui.c: Fixed the status/progress bar displaying issue in Windows
	The optind could go ahead of argc which caused -1 'fum' in ezgui_run()
	* ezgui.c: Fixed the logic that didn't run auto mode while initial.
	* ezgui.c: Fixed accessing utf-8 filename in Windows.
	It looks IUP option UTF8MODE_FILE turned every filename to UTF-8
	string so ezthumb has to abandon the fopen(), which was ok to read
	a file, but write to chaos filenames.
	The fix is using smm_fopen() instead which convert UTF-8 to UTF-16
	against the current code page.
	* ezicon.h: use the 128x128 icon only
	* ezgui.c: added hot keys to tab bar and decorated the ui

20160803:
	* libcsoup: updated to 0.9.3 to support module name translation.
	* Makefile: reviewed to support a better upsource management.

20160802:
	* external: upsourced to recent versions and clean up the libgd.
	* ezgui.c: removed the gtk part totally because IUP works pretty well.
	* ezthumb_debug.c: removed by reusing the same facilities in libcsoup.

20151119: Version 3.4.0 release
	* libcsoup: updated to 0.8.10
	* eziup.c: introduced SView to simplify the listview
	Many UI changes and elements introduced.

20150501:
	* eziup.c: added an 'about' page.

20150428:
	* ezicon.h: fixed a bug that ICON shifted 6 pixels.
	The ICON array converted from gdk-pixbuf-csource has a 24-byte-head
	structure, which is not needed in IupImage/IupImageRGB/IupImageRGBA.
	Otherwise IupImage/IupImageRGB/IupImageRGBA() will read the
	head as part of pixels, which shifts the whole image.

20150311: Version 3.3.0 release
	* libcsoup: fixed a makefile bug in main/ directory
	* Makefile: updated the release process

20150305:
	* libcsoup: updated to 0.8.3 that fixed the missing '/' issue.
	* Makefile: release method updated.

20150304:
	* Win32 version: updated the FFMPEG to 2015-03-03 git-5de2dab.
	It should support H.265.

20150303:
	* video_frame_free(): fixed the issue that av_frame_free() reported